# keyi

./: .gitignore  .pre-commit-config.yaml  .railwayignore  AI心理医生MVP需求规格文档.md  CLAUDE.md  Dockerfile  FIRST-PRINCIPLES-RECONSTRUCTION.md  FIX-PLAN.md  Makefile  README.md  RECONSTRUCTION-PLAN.md  REFACTORING_PLAN.md  REFERENCE.md  docker-compose.yml  progress.txt  railway.json  requirements.txt  task.json  test-function.js  tmpclaude-bdd6-cwd  vercel.json
.github/workflows/: ci.yml
.kiro/specs/mvp-chat-system/: design.md  requirements.md
.trae/documents/: VERSION2_TASK_PLAN.md  plan_20260202_082629.md  plan_20260205_225930.md  项目代码注释优化与本地化处理计划.md
.trae/tasks/: README.md
.trae/tasks/active/: MVP_TASK_001_确定MVP功能范围.md  MVP_TASK_002_简化后端对话服务.md  MVP_TASK_003_部署测试版本.md  (+2 more)
api/: index.js  index.py
backend/: .coveragerc  .env.example  .gitignore  =0.4  Dockerfile  pyproject.toml  pytest.ini  railway.json  requirements.txt  run.py  setup.cfg  start.sh  tmpclaude-0963-cwd
backend/app/: config.py  database.py  db.py  main.py  models.py  schemas.py
backend/app/prompts/: __init__.py  base_psychologist.md  cbt.md  desensitize.md
backend/app/routers/: auth.py  chat.py  therapy.py
backend/app/services/: alert_service.py  assessment_service.py  auth_service.py  cbt_service.py  chat_service.py  desensitize_service.py  llm_service.py  suggestion_service.py  supabase_service.py  therapy_base.py  user_service.py  zhipu_service.py
backend/app/services_old/: emotion_service.py  user_service.py
backend/tests/: test_alert_service.py  test_assessment_service.py  test_chat_api.py  test_emotion_service.py  test_suggestion_service.py
docs/: DEVELOPMENT_PLAN_v1.0.md  DEVELOPMENT_SETUP.md  ISSUE_TEMPLATE.md  MVP简化后端配置指南.md  Railway部署教程.md  TASK_DIFFICULTY_GUIDELINES.md  TASK_MANAGEMENT_GUIDE.md  UI优化清单.md  supabase_schema.sql  功能清单.md  完整版本执行路线图.md  对话交互流程_v3.puml  对话总结_v1.md  开发标准与流程规范.md  心理评估流程_v3.puml  数据管理与用户反馈流程_v3.puml  核心业务流程图_v1.puml  核心业务流程图_v2.puml  流程图技术评审报告_v2.md  流程图验证与迭代重绘工作总结报告.md  流程图验证报告_v1.md  流程图验证报告_v3.md  用户注册与认证流程_v3.puml  系统架构流程图_v1.puml  系统架构流程图_v2.puml  系统架构流程图_v3.puml  邮箱验证问题说明.md  部署指南.md  预警触发与处理流程_v3.puml
docs/_archive/: DEPENDENCY_VERSIONS.md  Supabase部署指南.md  Vercel部署教程.md  每日心理汇总功能灵感文档.md  高级工作流手册.md
frontend/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  tmpclaude-b872-cwd  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
knowledge-base/: README.md  index.json
knowledge-base/examples/: README.md  high_difficulty_example.md  low_difficulty_example.md  medium_difficulty_example.md
scripts/: generate_test_report.py  run_frontend_tests.bat  run_frontend_tests.sh  run_tests.bat  run_tests.sh  task_manager.py
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 001_create_chat_tables.sql  002_create_keyi_tables.sql
(+74 files in other folders)
